// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`board resolved config — golden snapshot (byte-identical across the _base extraction) > resolves every live board deterministically > demo 1`] = `
{
  "brandbook": undefined,
  "columns": [
    {
      "color": "#a78bfa",
      "description": "Entrada crua. Steps: Capturando (lane OCULTA da captura inteligente — você descreve a dor/objetivo e o preview propõe os cards para você aceitar ali mesmo) e Triagem (inbox de report_issue/captura: classifica, deduplica e roteia). Nada vira trabalho até passar para a Descoberta. O que ainda não está decidido não entra aqui: vira Ideia (a porta acima), e volta como tarefa quando a exploração terminar.",
      "id": "backlog",
      "name": "Triagem",
      "owner": "agent",
      "tool": "ideias",
    },
    {
      "color": "#3b82f6",
      "description": "Entender a story (sessão contínua — um agente, vários chapéus). Steps: Dúvidas (perguntas ao humano por contexto), Especificar (narrativa + aceite como hipótese), Entrevista (3 usuários sintéticos + 1 lente crítica validam/ajustam o aceite), Estimar (RICE/KANO/funil conforme a natureza da story) e A fazer (go/no-go: aprovar a story para construir).",
      "id": "discovery",
      "name": "Descoberta",
      "owner": "agent",
      "threadSession": true,
    },
    {
      "color": "#d946ef",
      "description": "Design (só stories user) — sessão contínua, um agente: Jornada (fluxo de uso, sem telas) → Telas (wireframes construídos a partir da jornada, mesma sessão) → Aprovar design (humano avalia jornada + telas juntas e aprova ou pede mudança em texto livre).",
      "id": "prepare",
      "name": "Design",
      "owner": "agent",
      "threadSession": true,
    },
    {
      "color": "#f97316",
      "description": "Construir a story de ponta a ponta: Pronto p/ dev (buffer até um run pegar) → Plano & Tarefas → Desenvolver → Revisão de código → QA / Testes (TDD/BDD; sub-agentes de DB, backend e frontend dentro do mesmo run; revisão de código e QA são continuação da construção).",
      "id": "construcao",
      "name": "Construção",
      "owner": "agent",
    },
    {
      "color": "#a855f7",
      "description": "Aprovar a entrega e publicar — UM card num stepper, 2 toques humanos. ① Aprovar (com o QA automatizado verde); daí integrar (código → stage), homologar e liberar acontecem automáticos. ② Deploy (Publicar) promove stage → main e publica de uma vez; depois o card vai para No ar.",
      "id": "entrega",
      "name": "Entrega",
      "owner": "human",
      "tool": "entrega",
    },
    {
      "color": "#16a34a",
      "description": "Entregue e em produção. Fim do pipeline.",
      "id": "live",
      "name": "No ar",
      "owner": "system",
    },
    {
      "color": "#f43f5e",
      "description": "Bucket INTERNO oculto (story-ql5mjm): a coluna Reabertura foi ELIMINADA do kanban. Refinar/Corrigir/ Descontinuar viram AÇÃO de card (type/mode refine|fix|retire) que reentra direto numa coluna de desenvolvimento — os status refinar/corrigir/descontinuar continuam existindo (lint + autorun) mas todos são \`hidden\`, então esta coluna nunca renderiza. Não arraste cards para cá.",
      "id": "reentry",
      "name": "Reentrada (oculta)",
      "owner": "human",
    },
    {
      "color": "#52525b",
      "description": "Terminais — arquivados, duplicados e cancelados. Fora do kanban; acessível pela lixeira no header do board.",
      "id": "archive",
      "name": "Arquivo",
      "owner": "system",
      "system": true,
    },
  ],
  "deploy": undefined,
  "faceUrl": undefined,
  "headroom": undefined,
  "id": "demo",
  "linkTypes": [
    {
      "id": "depends-on",
      "name": "Depende de",
    },
    {
      "id": "relates-to",
      "name": "Relacionado a",
    },
    {
      "id": "blocks",
      "name": "Bloqueia",
    },
    {
      "id": "duplicates",
      "name": "Duplica",
    },
    {
      "from": [
        "canvas",
        "inputMetric",
      ],
      "id": "serves",
      "name": "Serve",
      "to": [
        "desiredOutcome",
      ],
    },
    {
      "from": [
        "canvas",
      ],
      "id": "references",
      "name": "Referencia",
      "to": [
        "persona",
        "release",
        "idea",
        "activity",
      ],
    },
    {
      "from": [
        "idea",
      ],
      "id": "moves",
      "name": "Move",
      "to": [
        "inputMetric",
      ],
    },
    {
      "from": [
        "story",
      ],
      "id": "addresses",
      "name": "Endereça",
      "to": [
        "idea",
      ],
    },
    {
      "from": [
        "story",
        "idea",
      ],
      "id": "targets",
      "name": "Mira",
      "to": [
        "persona",
      ],
    },
  ],
  "name": "Livraria Aurora (demo)",
  "package": undefined,
  "release": {
    "mode": "auto",
  },
  "routeProfiles": {
    "express": {
      "description": "ajuste simples / technical trivial; o enrich grava priorityCall mínimo ao pular priorizar",
      "effortCap": "medium",
      "modelCap": "sonnet",
      "skips": [
        "interview",
        "design-ux",
        "design-ui",
        "com-design",
        "ready",
        "priorizar",
      ],
    },
    "full": {
      "description": "pipeline completo (default de user story com UI nova)",
      "skips": [],
    },
    "mechanical": {
      "description": "trabalho mecânico/fechado (resolução de conflito, juiz de hunks); turnos lean pelo baseline",
      "effortCap": "medium",
      "modelCap": "sonnet",
      "skips": [],
    },
    "standard": {
      "description": "só os skips por tipo (comportamento atual)",
      "skips": [],
    },
  },
  "sharedPackages": undefined,
  "specialists": {
    "copywriting": {
      "agent": "conversion-copywriter",
      "when": "copy de UI/CTA/notificação",
    },
    "performance": {
      "agent": "performance-auditor",
      "when": "render mobile, bundle, latência percebida",
    },
    "security": {
      "agent": "security-reviewer",
      "when": "rules, auth, pagamentos, dados sensíveis",
    },
  },
  "statuses": [
    {
      "autorun": true,
      "color": "#a78bfa",
      "column": "backlog",
      "costGuard": true,
      "description": "🤖 Automação (lane oculta): o harness-capture lê o texto livre do container (+ o feedback de refinamentos) e gera uma PROPOSTA de cards (summary + itens) em proposals/<id>.json, com a disciplina de granularidade (story≠task). NÃO cria os cards — só propõe e PARA aqui (não avança sozinho): o container descansa nesta lane oculta até você revisar a proposta no Inbox — Aceitar cria os cards na Triagem e consome o container; Refinar em texto livre regenera a proposta com o feedback.",
      "effort": "medium",
      "hidden": true,
      "id": "capturando",
      "maxTurns": 20,
      "model": "sonnet",
      "name": "Capturando",
      "trigger": "harness-capture",
    },
    {
      "color": "#eab308",
      "column": "backlog",
      "description": "📥 Caixa de entrada de bugs/melhorias reportados em texto livre (MCP report_issue ou captura inteligente). O agente de triagem classifica (tipo + severidade + labels), deduplica e ROTEIA — aceitar (entra no fluxo), duplicado, declinar ou adiar. Raia de staging: nada avança daqui sozinho, não é coluna de trabalho (ADR-056).",
      "id": "triage",
      "name": "Triagem",
      "staging": true,
    },
    {
      "autorun": false,
      "color": "#60a5fa",
      "column": "discovery",
      "costGuard": true,
      "description": "🤖 Manual (human-in-the-loop): rode o harness-grill ("Rodar agora") para gerar perguntas ao humano e ganhar contexto sobre a story antes de especificar. A skill escreve as perguntas no card e NÃO avança — o humano responde e move para Especificar. Não auto-roda (autorun:false).",
      "effort": "medium",
      "id": "grill",
      "maxTurns": 15,
      "model": "sonnet",
      "name": "Dúvidas",
      "short": "DÚV",
      "trigger": "harness-grill",
    },
    {
      "autorun": true,
      "color": "#3b82f6",
      "column": "discovery",
      "costGuard": true,
      "description": "🤖 Automação: o harness-enrich (re)classifica o storyType com confiança e, a partir da demanda capturada, escreve a narrativa (Como/quero/para ou variante técnica) e os critérios de aceite (Gherkin recomendado) como PRIMEIRA hipótese — a base que a Entrevista vai validar. Avança para Entrevista.",
      "effort": "medium",
      "id": "enriquecer",
      "maxTurns": 20,
      "model": "sonnet",
      "name": "Especificar",
      "short": "SPEC",
      "trigger": "harness-enrich",
    },
    {
      "autorun": true,
      "color": "#818cf8",
      "column": "discovery",
      "costGuard": true,
      "description": "🤖 Automação: o harness-interview simula 3 entrevistas com as personas do board (1 com lente crítica/cética) CONTRA a narrativa + aceite já especificados, valida/ajusta os critérios onde a conversa contradiz a hipótese, sintetiza dores/desejos/must-haves/riscos e avança para Estimar. Só stories user — technical/chore/spike/bug pulam direto para Estimar (skipForTypes).",
      "dispensable": true,
      "effort": "high",
      "id": "interview",
      "maxTurns": 25,
      "model": "sonnet",
      "name": "Entrevista",
      "short": "ENTR",
      "skipForTypes": [
        "technical",
        "chore",
        "spike",
        "bug",
      ],
      "trigger": "harness-interview",
    },
    {
      "autorun": true,
      "color": "#ec4899",
      "column": "discovery",
      "costGuard": true,
      "description": "🤖 Automação: o harness-prioritize pontua a story pela régua WSJF — valor, urgência e destravamento (cada um na escala 1·2·3·5·8·13) divididos pelo tamanho — estimando contra as ÂNCORAS já pontuadas do board e contra o que o produto já entregou, e a move para A fazer. A ordem do backlog cai dessa conta, então pontuar um card novo não mexe no score de nenhum outro. Só entra aqui com a narrativa completa (role + quero/precisamos + para/de modo que) e ≥1 critério de aceite (gate hasRefinement).",
      "dispensable": true,
      "effort": "medium",
      "gate": "hasRefinement",
      "id": "priorizar",
      "maxTurns": 15,
      "model": "sonnet",
      "name": "Estimar",
      "short": "EST",
      "trigger": "harness-prioritize",
    },
    {
      "autorun": false,
      "color": "#f59e0b",
      "column": "discovery",
      "description": "Priorizada — PARADA go/no-go (saída da Descoberta): só humano mexe e arrasta para fora o que deve ser construído. Só entra aqui com a prioridade avaliada (gate hasPrioritization: uma nota WSJF, ou o tier argumentado; a priorização numérica antiga — RICE/KANO/funil — ainda satisfaz o gate, mas é legado).",
      "gate": "hasPrioritization",
      "id": "pronta",
      "name": "A fazer",
      "short": "TODO",
    },
    {
      "autorun": true,
      "color": "#d946ef",
      "column": "prepare",
      "costGuard": true,
      "description": "🤖 Automação: o harness-ux desenha SÓ a jornada de uso — grafo estruturado (nós/arestas, renderizado como diagrama SVG real) + texto livre de como o usuário chega/navega/usa a feature, ancorado em JTBD/entrevistas/personas e conferido vs o resto do app — no bloco journey de wireframes/<id>.json; SEM telas. Em re-runs lê o feedback[] não-resolvido do sidecar. Avança para Telas (mesma sessão). Só stories \`user\`; technical/chore/spike/bug pulam o design (skipForTypes).",
      "dispensable": true,
      "effort": "medium",
      "id": "design-ux",
      "maxTurns": 20,
      "model": "sonnet",
      "name": "Jornada",
      "short": "FLUXO",
      "skipForTypes": [
        "technical",
        "chore",
        "spike",
        "bug",
      ],
      "toolkit": {
        "guidance": "Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
      },
      "trigger": "harness-ux",
    },
    {
      "autorun": true,
      "color": "#c084fc",
      "column": "prepare",
      "costGuard": true,
      "description": "🤖 Automação: o harness-ui compõe o CANVAS de design — telas com estados-chave, componentes, sub-fluxos e notas (formatos dsl ou html sandboxed) — A PARTIR da jornada do harness-ux — que ele tem na MESMA sessão (threadSession) e no bloco journey do sidecar — incorpora o feedback[] não-resolvido preservando artefatos aprovados (ids estáveis), define o artefato primário (wireframeChosen, satisfaz o gate hasWireframe) e avança para Aprovar design. Só stories user (skipForTypes).",
      "dispensable": true,
      "effort": "high",
      "id": "design-ui",
      "maxTurns": 25,
      "model": "sonnet",
      "name": "Telas",
      "short": "UI",
      "skipForTypes": [
        "technical",
        "chore",
        "spike",
        "bug",
      ],
      "toolkit": {
        "guidance": "Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
      },
      "trigger": "harness-ui",
    },
    {
      "autorun": false,
      "color": "#e879f9",
      "column": "prepare",
      "description": "PARADA humana: avalie a JORNADA + o CANVAS juntos no Inbox — aprove/comente POR ARTEFATO, troque o primário e aprove o design; ou peça ajuste (o feedback estruturado do sidecar re-roda as Telas, ou a Jornada quando o fluxo é questionado). Só entra aqui com wireframeChosen (gate hasWireframe). Avance manualmente para Pronto p/ dev.",
      "dispensable": true,
      "gate": "hasWireframe",
      "id": "com-design",
      "name": "Aprovar design",
      "short": "APROV",
      "skipForTypes": [
        "technical",
        "chore",
        "spike",
        "bug",
      ],
    },
    {
      "autorun": false,
      "color": "#22d3ee",
      "column": "construcao",
      "description": "Aprovado e pronto para desenvolver — buffer humano (green-light) até um run pegar o card. Stories técnicas pulam o Design e este buffer (o A fazer, na Descoberta, já é o go/no-go delas).",
      "dispensable": true,
      "id": "ready",
      "name": "Pronto p/ dev",
      "short": "READY",
      "skipForTypes": [
        "technical",
        "chore",
        "spike",
        "bug",
      ],
    },
    {
      "autorun": true,
      "color": "#0ea5e9",
      "column": "construcao",
      "costGuard": true,
      "description": "🤖 Automação: o harness-plan escreve o plano técnico (arquivos a tocar, abordagem, contratos, riscos) em plans/<id>.md E decompõe as tasks[] no MESMO run — a mesma mente que investigou o código, sem recarga de contexto nem drift de handoff — marca techPlanReady + tasks, e avança para Desenvolver. (A pipeline canônica não tem mais o step Tarefas separado; nos boards de produto o harness-tasks segue até a Fase 5.)",
      "effort": "high",
      "gate": "hasPlacement",
      "id": "plano-tecnico",
      "maxTurns": 60,
      "model": "opus",
      "name": "Plano & Tarefas",
      "short": "TASKS",
      "toolkit": {
        "expect": [
          {
            "level": "expected",
            "tool": "codegraph",
          },
        ],
        "guidance": "Consulte query_graph/get_neighbors do codegraph ANTES de propor a arquitetura; cite os nós e arquivos que o plano vai tocar.",
        "use": [
          "codegraph",
        ],
      },
      "trigger": "harness-plan",
    },
    {
      "autorun": true,
      "color": "#f97316",
      "column": "construcao",
      "costGuard": true,
      "description": "🤖 Automação: o harness-do implementa as tasks com TDD (harness-tests cobre a pirâmide); na Fase 3 fará fan-out de sub-agentes de DB/backend/frontend dentro do mesmo run. Ao terminar, move para Revisão de código. Só entra aqui com ≥1 task (gate hasTasks).",
      "effort": "high",
      "gate": "hasTasks",
      "id": "desenvolver",
      "maxTurns": 120,
      "model": "sonnet",
      "name": "Desenvolver",
      "short": "DEV",
      "toolkit": {
        "guidance": "Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
        "specialists": [
          "copywriting",
          "security",
        ],
      },
      "trigger": "harness-do",
    },
    {
      "autorun": true,
      "color": "#0d9488",
      "column": "construcao",
      "costGuard": true,
      "description": "🤖 Automação: o harness-review roda lentes (Firestore/Next.js/perf mobile/segurança/testes) no diff, auto-corrige o seguro (guardado por testes) e deixa só o que precisa de decisão como blocker; avança para QA / Testes se não houver blocker aberto.",
      "effort": "high",
      "gate": "hasBuildEvidence",
      "id": "revisar-codigo",
      "maxTurns": 80,
      "model": "opus",
      "name": "Revisão de código",
      "short": "REV",
      "toolkit": {
        "expect": [
          {
            "level": "expected",
            "tool": "codegraph",
          },
        ],
        "guidance": "Rode query_graph/get_neighbors do codegraph sobre os arquivos do diff (callers/dependências impactados) ANTES de revisar; cite os nós.",
        "specialists": [
          "security",
          "performance",
        ],
        "use": [
          "codegraph",
        ],
      },
      "trigger": "harness-review",
    },
    {
      "autorun": true,
      "color": "#0891b2",
      "column": "construcao",
      "costGuard": true,
      "description": "🤖 Automação: o harness-qa ramifica por storyType. \`user\` → sobe o stack dev seedado, executa os critérios de aceite de ponta a ponta (E2E Playwright derivados do acceptance[]) + sweep visual headless via chrome-devtools MCP (mobile + desktop, estados empty/erro/loading). technical/chore/spike/bug → o gate concreto é a SUÍTE do pacote (\`just test-<pkg>\`, ex.: \`just test-storymap\`) verde + as lentes do harness-review — sem seed/E2E/visual; suíte vermelha vira finding testing:blocker e NÃO destrava. Marca qaPassed e avança para Aprovar entrega só com tudo verde. Entra aqui só com o código revisado sem blocker (gate hasNoBlockers).",
      "effort": "medium",
      "gate": "hasNoBlockers",
      "id": "qa-automatizado",
      "maxTurns": 80,
      "model": "sonnet",
      "name": "QA / Testes",
      "short": "QA",
      "toolkit": {
        "expect": [
          {
            "level": "required",
            "tool": "browser",
            "when": "uiSurface",
          },
        ],
        "guidance": "Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
        "use": [
          "browser",
        ],
      },
      "trigger": "harness-qa",
    },
    {
      "autorun": false,
      "color": "#14b8a6",
      "column": "entrega",
      "description": "Aprovação humana do que foi entregue — já com o QA automatizado (aceite E2E + visual) verde. Avance para Integrar (a partir daí integrar e homologar são automáticos; o card descansa em Liberar pronto p/ publicar).",
      "gate": "hasQaPassed",
      "id": "revisao",
      "laneStep": true,
      "name": "Aprovar entrega",
    },
    {
      "autorun": true,
      "color": "#34d399",
      "column": "entrega",
      "description": "Integração concluída pelo merge train. Com \`autorun.staging\` ativa (Fase 4a) o run é DIVIDIDO — board data → main (board vivo) e código → branch \`stage\`. Passagem automática (sem agente): o card avança para Homologar.",
      "id": "merge",
      "laneStep": true,
      "name": "Integrar",
    },
    {
      "autorun": true,
      "color": "#10b981",
      "column": "entrega",
      "description": "Código integrado na branch \`stage\`, rodável para validação antes da promoção à main. Passagem automática (sem agente): o card avança para Liberar.",
      "id": "stage",
      "laneStep": true,
      "name": "Homologar",
    },
    {
      "autorun": false,
      "color": "#a855f7",
      "column": "entrega",
      "description": "PARADA — pronto, mas ainda NÃO no ar: o código está integrado na branch \`stage\`, aguardando o Deploy. Ainda NÃO foi promovido para \`main\` (o estado deliberado "pronto-mas-não-no-ar"). O clique de Deploy é que promove stage → main E publica de uma vez. Avance para Publicar.",
      "id": "release",
      "laneStep": true,
      "name": "Liberar",
    },
    {
      "autorun": true,
      "color": "#9333ea",
      "column": "entrega",
      "description": "PARADA humana — DEPLOY. Ao publicar (mover o card para cá), a cadeia única promove o código de \`stage\` para \`main\` (promoteStageToMain, path-scoped a packages/**, publicação GLOBAL) e DEPOIS dispara o deploy do board (deployBoard): storymap → rebuild+restart DETACHED via systemd-run; boards de produto → \`just orch-deploy\`. O card ESPERA aqui ("Publicando") até o deploy CONFIRMAR em todos os alvos: o settle mede por ancestralidade que o código está no sha publicado, carimba a prova (deployProof) e só então avança para No ar. Settle que falha reverte o card para Liberar; settle que não chega escala pelo aviso "deploy sem confirmação".",
      "id": "deploy",
      "laneStep": true,
      "name": "Publicar",
      "onEnter": "promote-and-deploy",
    },
    {
      "color": "#22c55e",
      "column": "live",
      "delivered": true,
      "description": "Entregue, validado e EM PRODUÇÃO — com prova. Só entra aqui com a publicação confirmada (gate hasDeployProof: o settle do deploy mediu e carimbou a prova; card sem código — sem stagedAt e sem commitRange — passa sem prova, pois nada publica). Fim do pipeline.",
      "gate": "hasDeployProof",
      "id": "concluida",
      "name": "No ar",
      "terminal": true,
    },
    {
      "autorun": true,
      "color": "#f43f5e",
      "column": "reentry",
      "costGuard": true,
      "description": "🤖 Automação (modo melhoria): reabra uma story em Aprovar entrega ou No ar pelo botão “Refinar”. O harness-refine diagnostica o que já existe (código + UX reais), reescreve os critérios como um DELTA sobre o comportamento atual e ROTEIA — UI/UX gera novas opções e cai em UX; copy/funcionalidade cai em Build. Daí as skills seguem cientes de mode:refine (melhoram in-place, sem recriar do zero) até a Aprovação.",
      "effort": "high",
      "gate": "hasRefineBrief",
      "hidden": true,
      "id": "refinar",
      "maxTurns": 50,
      "model": "opus",
      "name": "Refinar",
      "toolkit": {
        "expect": [
          {
            "level": "expected",
            "tool": "codegraph",
          },
        ],
        "guidance": "Use query_graph/get_neighbors do codegraph para mapear o que o refino toca (arquivos/rotas/callers) ANTES de reescrever o aceite. Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
        "use": [
          "codegraph",
        ],
      },
      "trigger": "harness-refine",
    },
    {
      "autorun": true,
      "color": "#dc2626",
      "column": "reentry",
      "costGuard": true,
      "description": "🤖 Automação (modo correção): reabra uma story em Aprovar entrega ou No ar pelo botão “Reportar bug”. O harness-fix diagnostica e REPRODUZ a regressão (escreve um teste que falha), reescreve os critérios como esperado×atual e ROTEIA — regressão visual cai em UX; comportamento cai em Build. Daí as skills seguem cientes de mode:fix (corrigem in-place, com guard de regressão) até a Aprovação.",
      "effort": "high",
      "gate": "hasBugReport",
      "hidden": true,
      "id": "corrigir",
      "maxTurns": 50,
      "model": "opus",
      "name": "Corrigir",
      "toolkit": {
        "expect": [
          {
            "level": "expected",
            "tool": "codegraph",
          },
        ],
        "guidance": "Use query_graph/get_neighbors do codegraph para localizar a regressão (arquivos/callers afetados) ANTES de reproduzir o bug. Se o board tiver guia de estilo (nota de contexto), ele rege a estética: tokens por papel; cheque debt.",
        "use": [
          "codegraph",
        ],
      },
      "trigger": "harness-fix",
    },
    {
      "autorun": true,
      "color": "#737373",
      "column": "reentry",
      "costGuard": true,
      "description": "🤖 Automação (modo descontinuação): reabra qualquer card pelo botão “Descontinuar”. O harness-retire diagnostica READ-ONLY o que a feature possui hoje (arquivos/rotas/flags/functions/dados), escreve um plano de remoção e executa o nível pedido — desativar (flag), despublicar (tira da navegação), remover código (deleta, git reverte) — pausando ANTES de apagar dados de produção, que exigem aprovação humana (“Aprovar exclusão de dados”). Manual: dispare com “Rodar agora”. Ao terminar, arquiva o card.",
      "effort": "max",
      "gate": "hasRetireBrief",
      "hidden": true,
      "id": "descontinuar",
      "maxTurns": 40,
      "model": "opus",
      "name": "Descontinuar",
      "toolkit": {
        "expect": [
          {
            "level": "expected",
            "tool": "codegraph",
          },
        ],
        "guidance": "Use query_graph/get_neighbors do codegraph para achar todos os usos/referências ANTES de planejar a remoção segura.",
        "use": [
          "codegraph",
        ],
      },
      "trigger": "harness-retire",
    },
    {
      "color": "#52525b",
      "column": "archive",
      "description": "Cemitério dos itens que existiram e não existem mais — postergados (revivíveis), abandonados (nunca construídos) e descontinuados (removidos do app). O chip de disposição distingue cada caso. Fim de linha, fora da visão “Em aberto”.",
      "id": "arquivados",
      "name": "Arquivados",
      "terminal": true,
    },
    {
      "color": "#a1a1aa",
      "column": "archive",
      "description": "Reporte duplicado de outro card (o canônico fica em duplicateOf). Estado terminal VISÍVEL — preserva auditoria/relatório, nunca apaga. Resultado da triagem “Marcar duplicado” (ADR-056).",
      "gate": "hasDuplicateOf",
      "id": "duplicado",
      "name": "Duplicado",
      "terminal": true,
    },
    {
      "color": "#71717a",
      "column": "archive",
      "description": "Reporte declinado na triagem (não será trabalhado), com o motivo registrado. Estado terminal VISÍVEL — preserva auditoria, nunca apaga. Resultado da triagem “Declinar” (ADR-056).",
      "id": "cancelado",
      "name": "Cancelado",
      "terminal": true,
    },
    {
      "color": "#8b5cf6",
      "column": "archive",
      "description": "Container de captura já consumido — a proposta foi aceita e os cards reais criados (ou a captura foi descartada). Estado terminal, fora da visão “Em aberto”.",
      "id": "capturado",
      "name": "Capturado",
      "terminal": true,
    },
  ],
  "toolConfigs": {
    "browser": {
      "description": "navegador headless via chrome-devtools MCP — interativo (o agente navega e REAGE ao que vê)",
      "fallback": "browser-script",
      "match": "^mcp__chrome-devtools__",
      "mcp": "storymap/qa-mcp.json",
      "outsideRunSandbox": true,
      "probe": "node scripts/capability-probe/browser-mcp.mjs",
      "probeTimeoutMs": 120000,
      "provides": "browser",
    },
    "browser-script": {
      "cli": "node scripts/visual-sweep.mjs",
      "description": "varredura visual por script Playwright (\`node scripts/visual-sweep.mjs --url … --label …\`): captura PNGs por breakpoint em .artifacts/screenshots/ e você JULGA lendo os PNGs com o tool Read",
      "probe": "node scripts/visual-sweep.mjs --probe",
      "probeTimeoutMs": 60000,
      "provides": "browser",
    },
    "codegraph": {
      "description": "grafo de código do pacote deste board (query_graph/get_neighbors)",
      "match": "^mcp__graphify__",
      "mcp": "storymap/graphify/{board}.json",
    },
  },
}
`;

exports[`board resolved config — golden snapshot (byte-identical across the _base extraction) > resolves every live board deterministically > demo-legado 1`] = `
{
  "brandbook": undefined,
  "columns": undefined,
  "deploy": undefined,
  "faceUrl": "https://aurora.exemplo.dev/selo/",
  "headroom": undefined,
  "id": "demo-legado",
  "linkTypes": [
    {
      "id": "depends-on",
      "name": "Depende de",
    },
    {
      "id": "relates-to",
      "name": "Relacionado a",
    },
    {
      "id": "blocks",
      "name": "Bloqueia",
    },
    {
      "id": "duplicates",
      "name": "Duplica",
    },
    {
      "from": [
        "canvas",
        "inputMetric",
      ],
      "id": "serves",
      "name": "Serve",
      "to": [
        "desiredOutcome",
      ],
    },
    {
      "from": [
        "canvas",
      ],
      "id": "references",
      "name": "Referencia",
      "to": [
        "persona",
        "release",
        "idea",
        "activity",
      ],
    },
    {
      "from": [
        "idea",
      ],
      "id": "moves",
      "name": "Move",
      "to": [
        "inputMetric",
      ],
    },
    {
      "from": [
        "story",
      ],
      "id": "addresses",
      "name": "Endereça",
      "to": [
        "idea",
      ],
    },
    {
      "from": [
        "story",
        "idea",
      ],
      "id": "targets",
      "name": "Mira",
      "to": [
        "persona",
      ],
    },
  ],
  "name": "Aurora Selo (demo, pipeline própria)",
  "package": undefined,
  "release": {
    "mode": "manual",
  },
  "routeProfiles": undefined,
  "sharedPackages": undefined,
  "specialists": {
    "copywriting": {
      "agent": "conversion-copywriter",
      "when": "copy de UI/CTA/notificação",
    },
    "performance": {
      "agent": "performance-auditor",
      "when": "render mobile, bundle, latência percebida",
    },
    "security": {
      "agent": "security-reviewer",
      "when": "rules, auth, pagamentos, dados sensíveis",
    },
  },
  "statuses": [
    {
      "color": "#eab308",
      "description": "📥 Caixa de entrada de pedidos e relatos em texto livre. Nada avança daqui sozinho.",
      "id": "triage",
      "name": "Triagem",
      "staging": true,
    },
    {
      "autorun": true,
      "color": "#3b82f6",
      "costGuard": true,
      "description": "🤖 Escreve a narrativa e os critérios de aceite, e move para Priorizar.",
      "id": "enriquecer",
      "maxTurns": 20,
      "name": "Enriquecer",
      "trigger": "harness-enrich",
    },
    {
      "autorun": true,
      "color": "#ec4899",
      "costGuard": true,
      "description": "🤖 Pontua pela régua WSJF contra as âncoras do board e move para Pronta p/ build.",
      "gate": "hasRefinement",
      "id": "priorizar",
      "maxTurns": 15,
      "name": "Priorizar",
      "trigger": "harness-prioritize",
    },
    {
      "autorun": false,
      "color": "#f59e0b",
      "description": "Priorizada — parada go/no-go. Avance manualmente para Design UI/UX ao aprovar.",
      "gate": "hasPrioritization",
      "id": "pronta",
      "name": "Pronta p/ build",
    },
    {
      "autorun": false,
      "color": "#d946ef",
      "costGuard": true,
      "description": "Desenha a jornada e as telas da fatia.",
      "id": "design-ux",
      "maxTurns": 20,
      "name": "Design UI/UX",
      "trigger": "harness-ux",
    },
    {
      "autorun": false,
      "color": "#e879f9",
      "description": "Parada humana — aprove o desenho antes do plano técnico.",
      "gate": "hasWireframe",
      "id": "com-design",
      "name": "Com design",
    },
    {
      "autorun": false,
      "color": "#0ea5e9",
      "costGuard": true,
      "description": "Escreve o plano de implementação da fatia.",
      "id": "plano-tecnico",
      "maxTurns": 20,
      "name": "Plano técnico",
      "trigger": "harness-plan",
    },
    {
      "autorun": true,
      "color": "#8b5cf6",
      "costGuard": true,
      "description": "🤖 Quebra o plano em tarefas verificáveis. Só entra com o plano técnico pronto.",
      "gate": "hasTechPlan",
      "id": "quebrar-tasks",
      "maxTurns": 20,
      "name": "Quebrar em tasks",
      "trigger": "harness-tasks",
    },
    {
      "autorun": false,
      "color": "#f97316",
      "costGuard": true,
      "description": "Constrói a fatia contra as tarefas declaradas.",
      "gate": "hasTasks",
      "id": "desenvolver",
      "maxTurns": 60,
      "name": "Em desenvolvimento",
      "trigger": "harness-do",
    },
    {
      "autorun": false,
      "color": "#0d9488",
      "costGuard": true,
      "description": "Revisão de código com evidência de build.",
      "id": "revisar-codigo",
      "maxTurns": 40,
      "name": "Revisar código",
      "trigger": "harness-review",
    },
    {
      "autorun": false,
      "color": "#0891b2",
      "costGuard": true,
      "description": "Roda o aceite automatizado e a varredura visual.",
      "gate": "hasNoBlockers",
      "id": "qa-automatizado",
      "maxTurns": 40,
      "name": "QA automatizado",
      "toolkit": {
        "expect": [
          {
            "level": "required",
            "tool": "browser",
            "when": "uiSurface",
          },
        ],
        "use": [
          "browser",
        ],
      },
      "trigger": "harness-qa",
    },
    {
      "color": "#14b8a6",
      "description": "Parada humana — aprove a entrega.",
      "gate": "hasQaPassed",
      "id": "revisao",
      "name": "Revisão",
    },
    {
      "autorun": true,
      "color": "#f43f5e",
      "costGuard": true,
      "description": "🤖 Melhora uma fatia já entregue a partir de um brief.",
      "gate": "hasRefineBrief",
      "id": "refinar",
      "maxTurns": 50,
      "name": "Refinar",
      "trigger": "harness-refine",
    },
    {
      "autorun": true,
      "color": "#dc2626",
      "costGuard": true,
      "description": "🤖 Corrige uma regressão a partir de um relato.",
      "gate": "hasBugReport",
      "id": "corrigir",
      "maxTurns": 50,
      "name": "Corrigir",
      "trigger": "harness-fix",
    },
    {
      "autorun": false,
      "color": "#737373",
      "description": "Remove ou arquiva uma capacidade entregue.",
      "gate": "hasRetireBrief",
      "id": "descontinuar",
      "maxTurns": 40,
      "name": "Descontinuar",
      "trigger": "harness-retire",
    },
    {
      "color": "#22c55e",
      "delivered": true,
      "description": "No ar.",
      "gate": "hasReleased",
      "id": "concluida",
      "name": "Concluída",
      "terminal": true,
    },
    {
      "color": "#52525b",
      "description": "Fora do fluxo, preservado.",
      "id": "arquivados",
      "name": "Arquivados",
      "terminal": true,
    },
    {
      "color": "#a1a1aa",
      "description": "Aponta para o card canônico.",
      "gate": "hasDuplicateOf",
      "id": "duplicado",
      "name": "Duplicado",
      "terminal": true,
    },
    {
      "color": "#71717a",
      "description": "Decidimos não fazer.",
      "id": "cancelado",
      "name": "Cancelado",
      "terminal": true,
    },
  ],
  "toolConfigs": {
    "browser": {
      "description": "navegador headless via chrome-devtools MCP — interativo (o agente navega e REAGE ao que vê)",
      "fallback": "browser-script",
      "match": "^mcp__chrome-devtools__",
      "mcp": "storymap/qa-mcp.json",
      "outsideRunSandbox": true,
      "probe": "node scripts/capability-probe/browser-mcp.mjs",
      "probeTimeoutMs": 120000,
      "provides": "browser",
    },
    "browser-script": {
      "cli": "node scripts/visual-sweep.mjs",
      "description": "varredura visual por script Playwright (\`node scripts/visual-sweep.mjs --url … --label …\`): captura PNGs por breakpoint em .artifacts/screenshots/ e você JULGA lendo os PNGs com o tool Read",
      "probe": "node scripts/visual-sweep.mjs --probe",
      "probeTimeoutMs": 60000,
      "provides": "browser",
    },
    "codegraph": {
      "description": "grafo de código do pacote deste board (query_graph/get_neighbors)",
      "match": "^mcp__graphify__",
      "mcp": "storymap/graphify/{board}.json",
    },
  },
}
`;
